<resources>
    <string name="app_name">Parking Finder</string>
    <string name="login_with_fb">Login with&#160;</string>
    <string name="login_with_email">Login with e-mail</string>
    <string name="create_account">Create account</string>
    <string name="facebook_app_id">479904142463724</string>
    <string name="fb_login_protocol_scheme">fb479904142463724</string>
    <string name="your_email">Your e-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="upps">Upps…</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try again</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading">Loading…</string>
</resources>
