<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    tools:layout_gravity="center">

    <TextView
        android:id="@+id/uppsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/upps"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/textBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="#292929"
        app:layout_constraintBottom_toTopOf="@+id/tryAgainTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uppsTV" />

    <TextView
        android:id="@+id/noInternetConnectionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/check_your_internet_connection"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@id/textBg"
        app:layout_constraintStart_toStartOf="@id/textBg"
        app:layout_constraintTop_toTopOf="@id/textBg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/connection_problem"
        app:layout_constraintBottom_toBottomOf="@id/textBg"
        app:layout_constraintEnd_toEndOf="@id/textBg"
        app:layout_constraintStart_toEndOf="@id/noInternetConnectionTV"
        app:layout_constraintTop_toTopOf="@id/textBg" />

    <TextView
        android:id="@+id/cancelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/montserrat_medium"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/cancel"
        android:textColor="@drawable/tv_white_selector"
        app:layout_constraintBottom_toBottomOf="@+id/tryAgainTV"
        app:layout_constraintEnd_toStartOf="@+id/tryAgainTV" />

    <TextView
        android:id="@+id/tryAgainTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:paddingBottom="4dp"
        android:paddingEnd="6dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/try_again"
        android:textColor="@drawable/tv_white_selector"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>