<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/main_bg">

    <ImageView
            android:id="@+id/logoIV"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    <TextView
            android:id="@+id/appNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoIV" />


    <TextView
            android:id="@+id/loginWithFbTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/button_blue"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/loginWithEmailBt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/fb_icon"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center_vertical"
            android:text="@string/login_with_fb"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/loginWithFbTV"
            app:layout_constraintEnd_toEndOf="@id/loginWithFbTV"
            app:layout_constraintStart_toStartOf="@id/loginWithFbTV"
            app:layout_constraintTop_toTopOf="@id/loginWithFbTV" />

    <Button
            android:id="@+id/loginWithEmailBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/button_white"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/login_with_email"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appNameTV"
            app:layout_constraintVertical_bias="0.45" />

    <Button
            android:id="@+id/createAccountBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_white"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginWithEmailBt" />

</android.support.constraint.ConstraintLayout>
