<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/main_bg">

    <TextView
            android:id="@+id/loginTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/log_in"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/backArrowIV"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:padding="8dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="@id/loginTitleTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginTitleTV" />

    <View
            android:id="@+id/bg1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="26dp"
            android:background="#66000000"
            app:layout_constraintBottom_toBottomOf="@+id/emailTIL"
            app:layout_constraintEnd_toEndOf="@+id/emailTIL"
            app:layout_constraintStart_toStartOf="@+id/emailTIL"
            app:layout_constraintTop_toTopOf="@+id/emailTIL" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:hint="@string/your_email"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:paddingTop="6dp"
            android:textColorHint="#b2ffffff"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTitleTV">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/emailTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-2dp"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textEmailAddress"
                android:textColor="#b2ffffff" />

    </android.support.design.widget.TextInputLayout>

    <View
            android:id="@+id/bg2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="26dp"
            android:background="#66000000"
            app:layout_constraintBottom_toBottomOf="@+id/passwordTIL"
            app:layout_constraintEnd_toEndOf="@+id/passwordTIL"
            app:layout_constraintStart_toStartOf="@+id/passwordTIL"
            app:layout_constraintTop_toTopOf="@+id/passwordTIL" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/password"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:paddingTop="6dp"
            android:textColorHint="#b2ffffff"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTIL">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-2dp"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textPassword"
                android:textColor="#b2ffffff" />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
            android:id="@+id/loadingAnimationPB"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:progressTint="#2F80ED"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/loginBt"
            app:layout_constraintLeft_toLeftOf="@+id/loginBt"
            app:layout_constraintRight_toRightOf="@+id/loginBt"
            app:layout_constraintTop_toTopOf="@+id/loginBt" />

    <Button
            android:id="@+id/loginBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_green"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bg2" />
</android.support.constraint.ConstraintLayout>